삼각형 푸는 방식

--- a/삼각형판별하기.html
+++ b/삼각형판별하기.html
@@ -16,6 +16,22 @@
                 else max =a;
                 if(max<c) max=c;
                 else max;
+                /*
+                    //내가 풀은 방식
+                    if(a===max){
+                        if(b+c > max) console.log("YES")
+                        else console.log("NO")
+                    }
+                    if(b===max){
+                        if(a+c > max) console.log("YES")
+                        else console.log("NO")
+                    }
+                    if(c===max){
+                        if(b+a > max) console.log("YES")
+                        else console.log("NO")
+                    }
+                */
+
                 if((sum-max)<=max) answer="NO";
                 else answer;
                 return answer;
