1부터 N까지 반복문이용해 출력

--- a/연필개수구하기.html
+++ b/연필개수구하기.html
@@ -6,12 +6,9 @@
     <body>
         <script>
             function solution(n){
-                let answer;
-                answer = Math.ceil(n/12);
-
+                let answer = Math.ceil(n/12);
                 return answer;
             }
-
             console.log(solution(178));
             console.log(solution(25));
         </script>
