--- a/유데미/ANAGRAMS.html
+++ b/유데미/ANAGRAMS.html
@@ -6,20 +6,21 @@
   <body>
     <script>
       function validAnagram(aObject, bObject) {
-        let answer = true;
-        let aH = new Map();
-        let bH = new Map();
-        for (x of aObject) {
-          aH.has(x) ? aH.set(x, aH.get(x) + 1) : aH.set(x, 1);
+        if (aObject.length !== bObject.length) return false;
+        const lookup = {};
+        for (let i = 0; i < aObject.length; i++) {
+          let letter = aObject[i];
+          lookup[letter] ? (lookup[letter] += 1) : (lookup[letter] = 1);
         }
-        for (y of bObject) {
-          bH.has(y) ? bH.set(y, bH.get(y) + 1) : bH.set(y, 1);
+        for (let i = 0; i < bObject.length; i++) {
+          let letter = bObject[i];
+          if (!lookup[letter]) {
+            return false;
+          } else {
+            lookup[letter] -= 1;
+          }
         }
-        if (aObject.length !== bObject.length) answer = false;
-        for (val of aObject) {
-          if (aH.get(val) !== bH.get(val)) answer = false;
-        }
-        return answer;
+        return true;
       }
       console.log(validAnagram("", ""));
       console.log(validAnagram("aaz", "zza"));
