색션 2 문제 변경

--- a/색션2/격자판최대합.html
+++ b/색션2/격자판최대합.html
@@ -1,34 +1,36 @@
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>출력결과</title>
-    </head>
-    <body>
-        <script>
-            function solution(arr){  
-                let answer=Number.MIN_SAFE_INTEGER;
-                let n=arr.length;
-                let sum1=sum2=sum3=sum4=0; //행의 합 sum1 / 열의 합 sum2
-                for(let i=0; i<n;i++){
-                    sum1=sum2=0; // 행이나 열이 변경될때 값을 0 으로 초기화
-                    for(let j=0;j<n;j++){
-                        sum1+=arr[i][j];
-                        sum2+=arr[j][i];
-                    }
-                    sum3+=arr[i][i];
-                    sum4+=arr[n-i-1][i];
-                    answer=Math.max(sum1,sum2,sum3,sum4);
-                }
-                
-                return answer;
-            }
+  <head>
+    <meta charset="UTF-8" />
+    <title>출력결과</title>
+  </head>
+  <body>
+    <script>
+      function solution(arr) {
+        let answer = Number.MIN_SAFE_INTEGER;
+        let n = arr.length;
+        let sum1 = (sum2 = sum3 = sum4 = 0); //행의 합 sum1 / 열의 합 sum2
+        for (let i = 0; i < n; i++) {
+          sum1 = sum2 = 0; // 행이나 열이 변경될때 값을 0 으로 초기화
+          for (let j = 0; j < n; j++) {
+            sum1 += arr[i][j];
+            sum2 += arr[j][i];
+          }
+          sum3 += arr[i][i];
+          sum4 += arr[n - i - 1][i];
+          answer = Math.max(sum1, sum2, sum3, sum4);
+        }
 
-            let arr=[[10, 13, 10, 12, 15], 
-                     [12, 39, 30, 23, 11],
-                     [11, 25, 50, 53, 15],
-                     [19, 27, 29, 37, 27],
-                     [19, 13, 30, 13, 19]];
-            console.log(solution(arr));
-        </script>
-    </body>
+        return answer;
+      }
+
+      let arr = [
+        [10, 13, 10, 12, 15],
+        [12, 39, 30, 23, 11],
+        [11, 25, 50, 53, 15],
+        [19, 27, 29, 37, 27],
+        [19, 13, 30, 13, 19],
+      ];
+      console.log(solution(arr));
+    </script>
+  </body>
 </html>
